[project]
name = "yodel"
version = "0.1.0"
description = "Your local search engine: Private, Secure, Customizable."
readme = "README.md"
authors = [
    { name = "lloydandersen", email = "lloydandersenco@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
]

[project.scripts]
yodel = "yodel:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
